fix(search): #738 nicer alignment for Atlantic line

--- a/src/components/layout/header.module.scss
+++ b/src/components/layout/header.module.scss
@@ -88,10 +88,12 @@
   img {
     display: flex;
     margin-right: 1rem;
+  }
+  img {
     padding-bottom: .2rem;
   }
   span {
-    padding-top: 1px;
+    padding-bottom: .1rem;
     margin-right: .5rem;
     font-size: 0.625rem;
     line-height: .8rem;
